--- a/assets/css/_main.scss
+++ b/assets/css/_main.scss
@@ -1,3 +1,58 @@
 #slider{
+    background-color: #f3f2ee;    
+    padding: 100px 0;
     
+    .slider-content{
+        img{
+            z-index: -111;
+        }
+        h5{
+            font-size: 64px ;
+            font-weight: 900;
+        }
+        h2{
+            font-size: 45px;
+            font-family: thin;
+
+        }
+        p{
+            span{
+                color: rgb(24, 99, 212);
+            }
+        }
+        a{
+            padding: 10px 20px;
+            background-color:rgb(24, 99, 212);
+            color: #fff;
+        }
+    }
+    
+   
+    .slider-prev{
+        background-color: #fff;
+        border: none;
+        position: absolute;
+        bottom: -20px;
+        right: 50%;
+        transform: translateX(-50%);
+        padding: 10px 15px;
+        color:#7d7d7d;
+        i{
+            font-size: 10px;
+        }
+    }
+    .slider-next{
+        border: none;
+        background-color: #fff;
+        position: absolute;
+        bottom: -20px;
+        left: 50%;
+        transform: translateX(-50%);
+        padding: 10px 15px;
+        color:#7d7d7d;
+        i{
+            font-size: 10px;
+        }
+    }
+   
 }
