--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,6 +8,7 @@
 @import "_nice-select";
 @import "_main.scss";
 @import "_footer.scss";
+@import"_detail.scss";
 
 @font-face {
   font-family: regular;
