--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -1477,7 +1477,10 @@ progress {
     flex: 0 0 auto;
     width: 16.66666667%;
   }
-
+  .col-lg-2-5 {
+    flex: 0 0 auto;
+    width: 20%;
+  }
   .col-lg-3 {
     flex: 0 0 auto;
     width: 25%;
@@ -1650,6 +1653,10 @@ progress {
   .col-xl-2 {
     flex: 0 0 auto;
     width: 16.66666667%;
+  }
+  .col-xl-2-5 {
+    flex: 0 0 auto;
+    width: 20%;
   }
 
   .col-xl-3 {
